grammar/ParMokka.y
-- This Happy file was machine-generated by the BNF converter
{
{-# OPTIONS_GHC -fno-warn-incomplete-patterns -fno-warn-overlapping-patterns #-}
module ParMokka where
import AbsMokka
import LexMokka
import ErrM

}

%name pProgram Program
-- no lexer declaration
%monad { Err } { thenM } { returnM }
%tokentype {Token}
%token
  '!' { PT _ (TS _ 1) }
  '!=' { PT _ (TS _ 2) }
  '&&' { PT _ (TS _ 3) }
  '(' { PT _ (TS _ 4) }
  ')' { PT _ (TS _ 5) }
  '*' { PT _ (TS _ 6) }
  '+' { PT _ (TS _ 7) }
  ',' { PT _ (TS _ 8) }
  '-' { PT _ (TS _ 9) }
  '/' { PT _ (TS _ 10) }
  ';' { PT _ (TS _ 11) }
  '<' { PT _ (TS _ 12) }
  '<=' { PT _ (TS _ 13) }
  '=' { PT _ (TS _ 14) }
  '==' { PT _ (TS _ 15) }
  '>' { PT _ (TS _ 16) }
  '>=' { PT _ (TS _ 17) }
  'boolean' { PT _ (TS _ 18) }
  'do' { PT _ (TS _ 19) }
  'downto' { PT _ (TS _ 20) }
  'else' { PT _ (TS _ 21) }
  'false' { PT _ (TS _ 22) }
  'for' { PT _ (TS _ 23) }
  'if' { PT _ (TS _ 24) }
  'int' { PT _ (TS _ 25) }
  'return' { PT _ (TS _ 26) }
  'string' { PT _ (TS _ 27) }
  'to' { PT _ (TS _ 28) }
  'true' { PT _ (TS _ 29) }
  'void' { PT _ (TS _ 30) }
  'while' { PT _ (TS _ 31) }
  '{' { PT _ (TS _ 32) }
  '||' { PT _ (TS _ 33) }
  '}' { PT _ (TS _ 34) }

L_ident  { PT _ (TV $$) }
L_integ  { PT _ (TI $$) }
L_quoted { PT _ (TL $$) }


%%

Ident   :: { Ident }   : L_ident  { Ident $1 }
Integer :: { Integer } : L_integ  { (read ( $1)) :: Integer }
String  :: { String }  : L_quoted {  $1 }

Program :: { Program }
Program : ListTopDef { AbsMokka.Program $1 }
TopDef :: { TopDef }
TopDef : Type Ident '(' ListArg ')' Block { AbsMokka.FnDef $1 $2 $4 $6 }
ListTopDef :: { [TopDef] }
ListTopDef : TopDef { (:[]) $1 } | TopDef ListTopDef { (:) $1 $2 }
Arg :: { Arg }
Arg : Type Ident { AbsMokka.Arg $1 $2 }
ListArg :: { [Arg] }
ListArg : {- empty -} { [] }
        | Arg { (:[]) $1 }
        | Arg ',' ListArg { (:) $1 $3 }
Block :: { Block }
Block : '{' ListStmt '}' { AbsMokka.Block (reverse $2) }
ListStmt :: { [Stmt] }
ListStmt : {- empty -} { [] } | ListStmt Stmt { flip (:) $1 $2 }
Stmt :: { Stmt }
Stmt : ';' { AbsMokka.Empty }
     | Block { AbsMokka.BStmt $1 }
     | Type ListItem ';' { AbsMokka.Decl $1 $2 }
     | Ident '=' Expr ';' { AbsMokka.Ass $1 $3 }
     | 'return' Expr ';' { AbsMokka.Ret $2 }
     | 'return' ';' { AbsMokka.VRet }
     | 'if' '(' Expr ')' Stmt { AbsMokka.Cond $3 $5 }
     | 'if' '(' Expr ')' Stmt 'else' Stmt { AbsMokka.CondElse $3 $5 $7 }
     | 'while' '(' Expr ')' Stmt { AbsMokka.While $3 $5 }
     | 'for' Item 'to' Expr 'do' Stmt { AbsMokka.ForTo $2 $4 $6 }
     | 'for' Item 'downto' Expr 'do' Stmt { AbsMokka.ForDownTo $2 $4 $6 }
     | Expr ';' { AbsMokka.SExp $1 }
Item :: { Item }
Item : Ident { AbsMokka.NoInit $1 }
     | Ident '=' Expr { AbsMokka.Init $1 $3 }
ListItem :: { [Item] }
ListItem : Item { (:[]) $1 } | Item ',' ListItem { (:) $1 $3 }
Type :: { Type }
Type : 'int' { AbsMokka.Int }
     | 'string' { AbsMokka.Str }
     | 'boolean' { AbsMokka.Bool }
     | 'void' { AbsMokka.Void }
ListType :: { [Type] }
ListType : {- empty -} { [] }
         | Type { (:[]) $1 }
         | Type ',' ListType { (:) $1 $3 }
Expr6 :: { Expr }
Expr6 : Ident { AbsMokka.EVar $1 }
      | Integer { AbsMokka.ELitInt $1 }
      | 'true' { AbsMokka.ELitTrue }
      | 'false' { AbsMokka.ELitFalse }
      | Ident '(' ListExpr ')' { AbsMokka.EApp $1 $3 }
      | String { AbsMokka.EString $1 }
      | '(' Expr ')' { $2 }
Expr5 :: { Expr }
Expr5 : '-' Expr6 { AbsMokka.Neg $2 }
      | '!' Expr6 { AbsMokka.Not $2 }
      | Expr6 { $1 }
Expr4 :: { Expr }
Expr4 : Expr4 MulOp Expr5 { AbsMokka.EMul $1 $2 $3 } | Expr5 { $1 }
Expr3 :: { Expr }
Expr3 : Expr3 AddOp Expr4 { AbsMokka.EAdd $1 $2 $3 } | Expr4 { $1 }
Expr2 :: { Expr }
Expr2 : Expr2 RelOp Expr3 { AbsMokka.ERel $1 $2 $3 } | Expr3 { $1 }
Expr1 :: { Expr }
Expr1 : Expr2 '&&' Expr1 { AbsMokka.EAnd $1 $3 } | Expr2 { $1 }
Expr :: { Expr }
Expr : Expr1 '||' Expr { AbsMokka.EOr $1 $3 } | Expr1 { $1 }
ListExpr :: { [Expr] }
ListExpr : {- empty -} { [] }
         | Expr { (:[]) $1 }
         | Expr ',' ListExpr { (:) $1 $3 }
AddOp :: { AddOp }
AddOp : '+' { AbsMokka.Plus } | '-' { AbsMokka.Minus }
MulOp :: { MulOp }
MulOp : '*' { AbsMokka.Times } | '/' { AbsMokka.Div }
RelOp :: { RelOp }
RelOp : '<' { AbsMokka.LTH }
      | '<=' { AbsMokka.LE }
      | '>' { AbsMokka.GTH }
      | '>=' { AbsMokka.GE }
      | '==' { AbsMokka.EQU }
      | '!=' { AbsMokka.NE }
{

returnM :: a -> Err a
returnM = return

thenM :: Err a -> (a -> Err b) -> Err b
thenM = (>>=)

happyError :: [Token] -> Err a
happyError ts =
  Bad $ "syntax error at " ++ tokenPos ts ++ 
  case ts of
    [] -> []
    [Err _] -> " due to lexer error"
    _ -> " before " ++ unwords (map (id . prToken) (take 4 ts))

myLexer = tokens
}
